--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "@babel/cli": "^7.13.14",
     "@babel/core": "^7.13.14",
+    "@babel/plugin-transform-regenerator": "^7.13.15",
     "@babel/preset-env": "^7.13.12",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.1.0",
@@ -16,6 +17,7 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
+    "jest": "^26.6.3",
     "stylelint": "^13.3.3",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-csstree-validator": "^1.9.0",
@@ -25,11 +27,13 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
+    "core-js": "^3.11.0",
     "phaser": "^3.54.0",
-    "@babel/polyfill": "^7.0.0"
+    "regenerator-runtime": "^0.13.7"
   },
   "scripts": {
-    "test": "npm run test",
+    "test": "jest",
     "build:dev": "webpack --mode development",
     "build": "webpack --mode production",
     "start": "webpack serve --mode development"
